name:                haskmas
version:             0.2.0.0
synopsis:            Code to generate the Haskmas Tree.
description:         Please see README.md
homepage:            https://github.com/silky/haskmas
license:             BSD3
license-file:        LICENSE
author:              Noon van der Silk
maintainer:          noonsilk@gmail.com
copyright:           2015 Noon van der Silk
category:            Drawing
build-type:          Simple
cabal-version:       >=1.10

executable haskmas
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:         base >= 4.7 && < 5
                       , optparse-applicative
                       , implicit
