name:                haskmass
version:             0.1.0.0
synopsis:            Code to generate the Haskmass Tree.
description:         Please see README.md
homepage:            https://github.com/silky/haskmass
license:             BSD3
license-file:        LICENSE
author:              Noon van der Silk
maintainer:          noonsilk@gmail.com
copyright:           2015 Noon van der Silk
category:            Drawing
build-type:          Simple
cabal-version:       >=1.10

executable haskmass
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:         base >= 4.7 && < 5
                       , implicit
